add icon for acordion on code-pallete

--- a/lib/css/jquery-sortable.css
+++ b/lib/css/jquery-sortable.css
@@ -61,6 +61,20 @@ ol.pallet-code li {
 	list-style-type: none;
 }
 
+.panel-heading .accordion-toggle:after {
+    /* symbol for "opening" panels */
+    font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
+    content: "\e114";    /* adjust as needed, taken from bootstrap.css */
+    float: right;        /* adjust as needed */
+    color: grey;         /* adjust as needed */
+}
+
+.panel-heading .accordion-toggle.collapsed:after {
+    /* symbol for "collapsed" panels */
+    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+}
+
+
 a.trash {
 	display: block;
 	width: 100px;
