change images of trash-can animation

--- a/lib/css/jquery-sortable.css
+++ b/lib/css/jquery-sortable.css
@@ -79,8 +79,8 @@ a.trash {
 	display: block;
 	width: 100px;
 	height:100px;
-	background: url(../img/trash.png) no-repeat 0 0;
+	background: url(../img/trash-close.png) no-repeat 0 0;
 }
 a.trash:hover {
-	background-position: 0 bottom;
+	background: url(../img/trash-open.png) no-repeat 0 0;
 }
