--- a/lib/css/jquery-sortable.css
+++ b/lib/css/jquery-sortable.css
@@ -9,7 +9,7 @@
 ol.block-code {
 	margin: 0 0 9px 0;
 	min-height: 10px;
-    width: 70%;
+    width: 90%;
 	cursor: move;
 }
 
@@ -63,15 +63,16 @@ ol.pallet-code li {
 
 .panel-heading .accordion-toggle:after {
     /* symbol for "opening" panels */
-    font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
-    content: "\e114";    /* adjust as needed, taken from bootstrap.css */
-    float: right;        /* adjust as needed */
-    color: grey;         /* adjust as needed */
+    font-family: 'Glyphicons Halflings';
+    content: "\e114";
+    float: right;
+    color: Turquoise;
 }
 
 .panel-heading .accordion-toggle.collapsed:after {
     /* symbol for "collapsed" panels */
-    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+    content: "\e080";
+    color: grey;
 }
 
 ol.trash-code li {
