--- a/lib/css/jquery-sortable.css
+++ b/lib/css/jquery-sortable.css
@@ -1,21 +1,21 @@
 /* jquery-sortable css */
 
 
-/** Block Edit Area **/
+/** Block type **/
 .dragged {
 	position: absolute;
 	opacity: 0.5;
 	z-index: 2000;
 }
 
-ol.block-code {
+.block {
 	margin: 0 0 9px 0;
 	min-height: 10px;
-    width: 90%;
+    width: 100%;
 	cursor: move;
 }
 
-ol.block-code li {
+.block li {
 	cursor: move;
 	display: block;
 	margin: 8px;
@@ -31,14 +31,14 @@ ol.block-code li {
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
-ol.block-code li:hover{
+.block li:hover{
 	border: 1px solid #000000;
 	color: #000000;
 	font-weight: bold;
-	background-color: #E5E9EA;
+	/* background-color: #E5E9EA; */
 }
 
-ol.block-code li.placeholder {
+.block li.placeholder {
     position: relative;
     margin: 0;
     padding: 0;
@@ -46,7 +46,7 @@ ol.block-code li.placeholder {
     border-style: dotted;
 }
 	
-ol.block-code li.placeholder:before {
+.block li.placeholder:before {
 	position: absolute;
 	content: "";
 	width: 0;
@@ -66,11 +66,6 @@ ol.pallet-code {
 	padding-left: 0
 }
 
-ol.pallet-code li {
-	list-style-type: none;
-	font-size: 12px;
-}
-
 .panel-default {
 	margin: 8px
 }
@@ -80,13 +75,13 @@ ol.pallet-code li {
     font-family: 'Glyphicons Halflings';
     content: "\e114";
     float: right;
-    color: Turquoise;
+    color: grey;
 }
 
 .panel-heading .accordion-toggle.collapsed:after {
     /* symbol for "collapsed" panels */
     content: "\e080";
-    color: grey;
+    color: lightgrey;
 }
 
 
@@ -94,11 +89,6 @@ ol.pallet-code li {
 
 ol.trash-code {
 	padding-left: 10px
-}
-
-ol.trash-code li {
-	font-size: 12px;
-	list-style-type: none;
 }
 
 a.trash {
