--- a/lib/css/jquery-sortable.css
+++ b/lib/css/jquery-sortable.css
@@ -32,13 +32,11 @@
 }
 
 .block li:hover{
-	/** border: 1px solid gray; **/
-	opacity: 0.8;
-	padding: 3px 14px 5px 16px;
+	padding: 2px 17px 6px 13px; /* for float effect*/
 	font-weight: bold;
-	box-shadow: 1px 1px 1px 1px lightgray;
-    -webkit-box-shadow: 1px 1px 1px 1px lightgray;
-    -moz-box-shadow: 1px 1px 1px 1px lightgray;
+	box-shadow: 2px 2px 2px 2px lightgray;
+    -webkit-box-shadow: 2px 2px 2px 2px lightgray;
+    -moz-box-shadow: 2px 2px 2px 2px lightgray;
 }
 
 .block li.placeholder {
