--- a/lib/css/soramame.block.css
+++ b/lib/css/soramame.block.css
@@ -68,6 +68,23 @@
     padding: 0px;
 }
 
+/* Editable expression */
+.block li span.exp-body {
+	margin: 0px, 2px;
+	padding: 0px, 4px, 0px, 8px;
+	background-color: white;
+	color: black;
+ 	filter: alpha(opacity=80);
+	-moz-opacity: 0.8;
+	opacity: 0.8;
+	border: 2px inset gray;
+	border-radius: 3px;
+	-webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
+		  transition: border .25s linear, color .25s linear, background-color .25s linear;
+
+	-webkit-font-smoothing: subpixel-antialiased;
+}
+
 /** Code-Pallete **/
 
 ol.pallet-code {
@@ -144,16 +161,6 @@ a.trash:hover {
 	color: White;
 }
 
-/* Editable expression */
-.exp-body {
-	margin: 0px, 4px;
-	padding: 0px, 2px;
-	background-color: lightgray;
-	color: black;
- 	filter: alpha(opacity=80);
-	-moz-opacity: 0.8;
-	opacity: 0.8;
-}
 
 /* code body visibility*/
 .code-body {
