--- a/lib/css/soramame.block.css
+++ b/lib/css/soramame.block.css
@@ -73,6 +73,7 @@
 .block li span.exp-body {
 	margin: 0px, 2px;
 	padding-left: 0.2em;
+	padding-right: 0.2em;
 	background-color: white;
 	color: black;
  	filter: alpha(opacity=60);
