--- a/lib/css/soramame.block.css
+++ b/lib/css/soramame.block.css
@@ -11,13 +11,12 @@
 	margin: 0 0 9px 0;
 	min-height: 10px;
     width: 100%;
-	cursor: move;
 }
 
 .block li {
 	cursor: move;
 	list-style: none;
-	margin: 8px 8px 8px 8px;
+	margin: 8px 8px 4px 8px;
 	padding: 2px 15px 2px 15px;
 	font-size: 12px;
 	font-weight: bold;
@@ -32,7 +31,7 @@
 }
 
 .block li:hover{
-	margin: 6px 8px 10px 8px; /* for float effect*/
+	margin: 6px 8px 6px 8px; /* for float effect*/
 	padding: 0px 17px 4px 13px; /* for float effect*/
 	font-weight: bold;
 	box-shadow: 2px 2px 2px 2px gray;
@@ -71,9 +70,8 @@
 
 /* Editable expression */
 .block li span.exp-body {
-	margin: 0px, 2px;
-	padding-left: 0.2em;
-	padding-right: 0.2em;
+	cursor: text;
+	padding: 0em 0.2em;
 	background-color: white;
 	color: black;
  	filter: alpha(opacity=60);
@@ -82,7 +80,8 @@
 	border: 2px inset gray;
 	border-radius: 3px;
 	-webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
-	transition: border .25s linear, color .25s linear, background-color .25s linear;
+		transition: border .25s linear, color .25s linear, background-color .25s linear;
+		
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
