--- a/lib/css/soramame.block.css
+++ b/lib/css/soramame.block.css
@@ -10,18 +10,18 @@
 .block {
 	margin: 0 0 9px 0;
 	min-height: 10px;
-    width: 100%;
+   /*  width: 100%; */
 }
 
 .block li {
 	cursor: move;
 	list-style: none;
-	margin: 8px 8px 4px 8px;
-	padding: 2px 15px 2px 15px;
+	margin: 8px 8px 8px 8px;
+	padding: 0px 4px 4px 4px;
 	font-size: 12px;
 	font-weight: bold;
-	line-height: 1.4;
-	word-spacing: 0.2em;
+ 	line-height: 1.4;
+	word-spacing: 0.3em;
 	border: 1px solid white;
 	border-radius: 4px;
 	-webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
@@ -32,7 +32,7 @@
 
 .block li:hover{
 	margin: 6px 8px 6px 8px; /* for float effect*/
-	padding: 0px 17px 4px 13px; /* for float effect*/
+	padding: 0px 2px 6px 4px; /* for float effect*/
 	font-weight: bold;
 	box-shadow: 2px 2px 2px 2px gray;
     -webkit-box-shadow: 2px 2px 2px 2px gray;
@@ -71,6 +71,7 @@
 /* Editable expression */
 .block li span.exp-body {
 	cursor: text;
+	margin: 0px;
 	padding: 0em 0.2em;
 	background-color: white;
 	color: black;
