add turtle demo!

--- a/lib/css/soramame.block.css
+++ b/lib/css/soramame.block.css
@@ -164,6 +164,11 @@ a.trash:hover {
 	color: White;
 }
 
+/* Function */
+.func-block {
+	background-color: Orange; /* Orange */
+	color: White;
+}
 
 /* code body visibility*/
 .code-body {
