change block color

--- a/lib/css/soramame.block.css
+++ b/lib/css/soramame.block.css
@@ -166,7 +166,7 @@ a.trash:hover {
 
 /* Function */
 .func-block {
-	background-color: Orange; /* Orange */
+	background-color: #f1c40f; /* Sun flower */
 	color: White;
 }
 
